--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -639,6 +639,11 @@ progress {
   margin-left: auto;
 }
 
+/* 補充members格式
+.container .row .col-lg-4{
+  width: 200px;
+} */
+
 @media (min-width: 576px) {
   .container-sm, .container {
     max-width: 540px;
