--- a/templates/charts.html
+++ b/templates/charts.html
@@ -24,12 +24,12 @@
         var area_data2 = '{{ area_data2 }}';
         area_data1 = area_data1.split(', ');
         area_data2 = area_data2.split(', ');
-        var area_min = Math.floor((Math.min.apply(Math, area_data1), Math.min.apply(Math, area_data2))/10)*10;
-        var area_max = Math.ceil(Math.max.apply(Math, area_data1), Math.max.apply(Math, area_data2));
+        var area_min = Math.floor(Math.min(Math.min.apply(Math, area_data1), Math.min.apply(Math, area_data2)) / 10) * 10;
+        var area_max = Math.ceil(Math.max(Math.max.apply(Math, area_data1), Math.max.apply(Math, area_data2)) / 10) * 10;
         // bar data
         var bar_data = '{{ bar_data }}';
         bar_data = bar_data.split(', ');
-        var bar_max = Math.ceil(Math.max.apply(Math, bar_data)/10000)*10000
+        var bar_max = Math.ceil(Math.max.apply(Math, bar_data) / 1000000) * 1000000
         // pie data
         var pie_labels = '{{ pie_labels }}';
         var pie_data = '{{ pie_data }}';
@@ -46,7 +46,7 @@
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
-        <form method ="POST" action="/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <form method ="POST" action="/yougood/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
                 <input type="text" name ="code" class="form-control" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
                 <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
@@ -86,6 +86,11 @@
                         <a class="nav-link" href="tables.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Tables
+                        </a>
+                        <div class="sb-sidenav-menu-heading">Profile</div>
+                        <a class="nav-link" href="members.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            Members
                         </a>
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
