--- a/templates/index-code.html
+++ b/templates/index-code.html
@@ -28,12 +28,12 @@
         var area_data2 = '{{ area_data2 }}';
         area_data1 = area_data1.split(', ');
         area_data2 = area_data2.split(', ');
-        var area_min = Math.floor((Math.min.apply(Math, area_data1), Math.min.apply(Math, area_data2))/10)*10;
-        var area_max = Math.ceil(Math.max.apply(Math, area_data1), Math.max.apply(Math, area_data2));
+        var area_min = Math.floor(Math.min(Math.min.apply(Math, area_data1), Math.min.apply(Math, area_data2)) / 10) * 10;
+        var area_max = Math.ceil(Math.max(Math.max.apply(Math, area_data1), Math.max.apply(Math, area_data2)) / 10) * 10;
         // bar data
         var bar_data = '{{ bar_data }}';
         bar_data = bar_data.split(', ');
-        var bar_max = Math.ceil(Math.max.apply(Math, bar_data)/1000000)*1000000
+        var bar_max = Math.ceil(Math.max.apply(Math, bar_data) / 1000000) * 1000000
     </script>
 </head>
 
@@ -45,7 +45,7 @@
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
-        <form method ="POST" action="/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <form method ="POST" action="/yougood/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
                 <input type="text" name ="code" class="form-control" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
                 <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
@@ -235,7 +235,7 @@
                                 </tfoot>
                                 <tbody>
                                     {% for row in table_data %}
-                                    <tr onclick="location.href=`/${'{{ row[0] }}'}`;">
+                                    <tr onclick="location.href=`/yougood/${'{{ row[0] }}'}`;">
                                         {% for data in row %}
                                         <td>{{ data }}</td>
                                         {% endfor %}
