--- a/templates/tables.html
+++ b/templates/tables.html
@@ -31,7 +31,7 @@
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
-        <form method ="POST" action="/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <form method ="POST" action="/yougood/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
                 <input type="text" name ="code" class="form-control" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
                 <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
@@ -71,6 +71,11 @@
                         <a class="nav-link" href="tables.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Tables
+                        </a>
+                        <div class="sb-sidenav-menu-heading">Profile</div>
+                        <a class="nav-link" href="members.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            Members
                         </a>
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
@@ -172,7 +177,7 @@
                                 </tfoot>
                                 <tbody>
                                     {% for row in table_data %}
-                                    <tr onclick="location.href=`/${'{{ row[0] }}'}`;">
+                                    <tr onclick="location.href=`/yougood/${'{{ row[0] }}'}`;">
                                         {% for data in row %}
                                         <td>{{ data }}</td>
                                         {% endfor %}
