--- a/templates/charts.html
+++ b/templates/charts.html
@@ -73,12 +73,12 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Core</div>
+                        <div class="sb-sidenav-menu-heading">Summary</div>
                         <a class="nav-link" href="index.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <div class="sb-sidenav-menu-heading">Addons</div>
+                        <div class="sb-sidenav-menu-heading">Analysis</div>
                         <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Charts
@@ -88,8 +88,7 @@
                             Tables
                         </a>
                         <div class="sb-sidenav-menu-heading">Profile</div>
-                        <a class="nav-link" href="members.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        <a class="nav-link" href="members.html" target="_blank">
                             Members
                         </a>
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
@@ -175,7 +174,7 @@
                             <i class="fas fa-chart-area me-1"></i>
                             Predict
                         </div>
-                        <div class="card-body"><canvas id="myAreaChart" width="100%" height="30"></canvas></div>
+                        <div class="card-body"><canvas id="myAreaChart" width="100%" height="80"></canvas></div>
                         <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                     </div>
                     <div class="row">
@@ -193,7 +192,7 @@
                             <div class="card mb-4">
                                 <div class="card-header">
                                     <i class="fas fa-chart-pie me-1"></i>
-                                    Pie Chart
+                                    News Sentiment
                                 </div>
                                 <div class="card-body"><canvas id="myPieChart" width="100%" height="50"></canvas></div>
                                 <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
