--- a/templates/index.html
+++ b/templates/index.html
@@ -80,23 +80,22 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Core</div>
+                        <div class="sb-sidenav-menu-heading">Summary</div>
                         <a class="nav-link" href="index.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <div class="sb-sidenav-menu-heading">Addons</div>
-                        <!-- <a class="nav-link" href="charts.html">
+                        <div class="sb-sidenav-menu-heading">Analysis</div>
+                        <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Charts
-                        </a> -->
+                        </a>
                         <a class="nav-link" href="tables.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Tables
                         </a>
                         <div class="sb-sidenav-menu-heading">Profile</div>
-                        <a class="nav-link" href="members.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        <a class="nav-link" href="members.html" target="_blank">
                             Members
                         </a>
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
@@ -213,16 +212,16 @@
                                     <i class="fas fa-chart-area me-1"></i>
                                     Predict
                                 </div>
-                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="80"></canvas></div>
                             </div>
                         </div>
                         <div class="col-xl-6">
                             <div class="card mb-4">
                                 <div class="card-header">
                                     <i class="fas fa-chart-bar me-1"></i>
-                                    Volume
+                                    News Size
                                 </div>
-                                <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                                <div class="card-body"><canvas id="myBarChart" width="100%" height="80"></canvas></div>
                             </div>
                         </div>
                     </div>
