--- a/templates/members.html
+++ b/templates/members.html
@@ -140,6 +140,8 @@
 
 <body oncontextmenu='return false' class='snippet-body'>
     <div class="container">
+        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+        <br>
     <div class="row">
         <div class="col-lg-4">
             <div class="card p-0">
@@ -148,7 +150,7 @@
                     <h4 class="pt-2">people 1</h4>
                     <h5>Creative Desinger</h5>
                     <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-line"></span> </a> </li>
+                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
                         <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
                         <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
                     </ul>
@@ -157,12 +159,13 @@
         </div>
         <div class="col-lg-4">
             <div class="card p-0">
-                <div class="card-image"> <img src="../static/assets/img/11.png" alt=""> </div>
+                <!-- <div class="card-image"> <img src="../static/assets/img/11.png" alt=""> </div> -->
+                <div class="card-image"> <img src="https://images.pexels.com/photos/381843/pexels-photo-381843.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
                 <div class="card-content d-flex flex-column align-items-center">
                     <h4 class="pt-2">11</h4>
                     <h5>加油加油11加油加油</h5>
                     <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-line"></span> </a> </li>
+                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
                         <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
                         <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
                     </ul>
@@ -176,9 +179,9 @@
                     <h4 class="pt-2">Cathy</h4>
                     <h5>Creative Desinger</h5>
                     <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-line"></span> </a> </li>
+                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
                         <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
-                        <li style="--i:3"> <a href="https://github.com/Cathy224"> <span class="fab fa-github"></span> </a> </li>
+                        <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
                     </ul>
                 </div>
             </div>
@@ -193,7 +196,7 @@
                     <h4 class="pt-2">people 4</h4>
                     <h5>Creative Desinger</h5>
                     <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-line"></span> </a> </li>
+                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
                         <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
                         <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
                     </ul>
@@ -207,7 +210,7 @@
                     <h4 class="pt-2">people 5</h4>
                     <h5>Creative Desinger</h5>
                     <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-line"></span> </a> </li>
+                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
                         <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
                         <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
                     </ul>
@@ -221,7 +224,7 @@
                     <h4 class="pt-2">people 6</h4>
                     <h5>Creative Desinger</h5>
                     <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-line"></span> </a> </li>
+                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
                         <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
                         <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
                     </ul>
