--- a/templates/tables.html
+++ b/templates/tables.html
@@ -74,9 +74,10 @@
                         </a>
                         <div class="sb-sidenav-menu-heading">Profile</div>
                         <a class="nav-link" href="members.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Members
                         </a>
+                      
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
                             data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
