--- a/templates/index-code.html
+++ b/templates/index-code.html
@@ -72,12 +72,12 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Core</div>
+                        <div class="sb-sidenav-menu-heading">Summary</div>
                         <a class="nav-link" href="index.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <div class="sb-sidenav-menu-heading">Addons</div>
+                        <div class="sb-sidenav-menu-heading">Analysis</div>
                         <a class="nav-link" href="charts.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             Charts
@@ -85,6 +85,10 @@
                         <a class="nav-link" href="tables.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Tables
+                        </a>
+                        <div class="sb-sidenav-menu-heading">Profile</div>
+                        <a class="nav-link" href="members.html" target="_blank">
+                            Members
                         </a>
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
@@ -199,7 +203,7 @@
                                     <i class="fas fa-chart-area me-1"></i>
                                     Predict
                                 </div>
-                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="80"></canvas></div>
                             </div>
                         </div>
                         <div class="col-xl-6">
@@ -208,7 +212,7 @@
                                     <i class="fas fa-chart-bar me-1"></i>
                                     Volume
                                 </div>
-                                <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                                <div class="card-body"><canvas id="myBarChart" width="100%" height="80"></canvas></div>
                             </div>
                         </div>
                     </div>
