--- a/templates/index-code.html
+++ b/templates/index-code.html
@@ -87,7 +87,8 @@
                             Tables
                         </a>
                         <div class="sb-sidenav-menu-heading">Profile</div>
-                        <a class="nav-link" href="members.html" target="_blank">
+                        <a class="nav-link" href="members.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Members
                         </a>
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
@@ -156,7 +157,8 @@
                 <div class="container-fluid px-4">
                     <h1 class="mt-4">{{ code }}</h1>
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item active">Dashboard</li>
+                        <li class="breadcrumb-item active"><a href="index.html">Dashboard</a></li>
+                        <!-- <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li> -->
                     </ol>
                     <!-- <div class="row">
                         <div class="col-xl-3 col-md-6">
