--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,8 @@
                             Tables
                         </a>
                         <div class="sb-sidenav-menu-heading">Profile</div>
-                        <a class="nav-link" href="members.html" target="_blank">
+                        <a class="nav-link" href="members.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Members
                         </a>
                         <!-- <div class="sb-sidenav-menu-heading">Interface</div>
