--- a/templates/members.html
+++ b/templates/members.html
@@ -34,6 +34,7 @@
      display: flex;
      justify-content: center
  }
+ 
 
  .card {
      position: relative;
@@ -140,7 +141,7 @@
 
 <body oncontextmenu='return false' class='snippet-body'>
     <div class="container">
-        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+        <li class="breadcrumb-item"><a href="index.html" style="color:#fff">Dashboard</a></li>
         <br>
     <div class="row">
         <div class="col-lg-4">
