--- a/templates/charts.html
+++ b/templates/charts.html
@@ -27,6 +27,8 @@
         var area_min = Math.floor(Math.min(Math.min.apply(Math, area_data1), Math.min.apply(Math, area_data2)) / 10) * 10;
         var area_max = Math.ceil(Math.max(Math.max.apply(Math, area_data1), Math.max.apply(Math, area_data2)) / 10) * 10;
         // bar data
+        var bar_labels = '{{ bar_labels }}';
+        bar_labels = bar_labels.split(', ');
         var bar_data = '{{ bar_data }}';
         bar_data = bar_data.split(', ');
         var bar_max = Math.ceil(Math.max.apply(Math, bar_data) / 1000000) * 1000000
