--- a/templates/members.html
+++ b/templates/members.html
@@ -151,7 +151,7 @@
                     <h4 class="pt-2">people 1</h4>
                     <h5>Creative Desinger</h5>
                     <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
+                        <li style="--i:1"> <a href="mailto:"> <span class="fab fa-google"></span> </a> </li>
                         <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
                         <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
                     </ul>
