--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,16 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
+                        <!-- <ol class="breadcrumb mb-4">
+                            <li>
+                                <form method ="POST" action="/yougood/index-code.html" class="search-form" aria-label="Search for..." aria-describedby="btnNavbarSearch">
+                                  <div class="form-group md-form mt-0 pt-1 waves-light">
+                                    <input type="text" name ="code" class="form-control" placeholder="Search for...">
+                                    <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
+                                  </div>
+                                </form>
+                            </li>
+                        </ol> -->
                         <div class="sb-sidenav-menu-heading">Summary</div>
                         <a class="nav-link" href="index.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
