--- a/templates/members.html
+++ b/templates/members.html
@@ -32,9 +32,12 @@
 
  .container .row .col-lg-4 {
      display: flex;
-     justify-content: center
+     justify-content:center
  }
- 
+ /* .container .row .col-lg-5 {
+     display: flex;
+     justify-content:space-between
+ } */
 
  .card {
      position: relative;
@@ -136,6 +139,7 @@
      .container .row .col-lg-4 {
          margin: 20px 0px
      }
+
  }</style>
 </head>
 
@@ -192,6 +196,7 @@
     <div class="row">
         <div class="col-lg-4">
             <div class="card p-0">
+                <span></span>
                 <div class="card-image"> <img src="https://images.pexels.com/photos/2746187/pexels-photo-2746187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
                 <div class="card-content d-flex flex-column align-items-center">
                     <h4 class="pt-2">people 4</h4>
@@ -209,20 +214,6 @@
                 <div class="card-image"> <img src="https://images.pexels.com/photos/381843/pexels-photo-381843.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
                 <div class="card-content d-flex flex-column align-items-center">
                     <h4 class="pt-2">people 5</h4>
-                    <h5>Creative Desinger</h5>
-                    <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
-                        <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
-                        <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card p-0">
-                <div class="card-image"> <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="card-content d-flex flex-column align-items-center">
-                    <h4 class="pt-2">people 6</h4>
                     <h5>Creative Desinger</h5>
                     <ul class="social-icons d-flex justify-content-center">
                         <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
