--- a/templates/members.html
+++ b/templates/members.html
@@ -1,232 +1,252 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>YOU GOOD MEMBERS</title>
-    <!-- <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet'> -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>YOU!GOOD!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
+        crossorigin="anonymous"></script>
     <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' rel='stylesheet'>
-    <!-- <link href=https://use.fontawesome.com/releases/v5.7.2/css/all.css> -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
-    <script type='text/javascript' src=''></script>
-    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif
+        }
 
- * {
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
-     font-family: 'Poppins', sans-serif
- }
+        body {
+            min-height: 100vh;
+            background: linear-gradient(to bottom, #000428, #004683)
+        }
 
- body {
-     min-height: 100vh;
-     background: linear-gradient(to bottom, #000428, #004683)
- }
+        .container {
+            margin-top: 50px
+        }
 
- .container {
-     margin-top: 50px
- }
+        .container .row .col-lg-4 {
+            display: flex;
+            justify-content: center
+        }
 
- .container .row .col-lg-4 {
-     display: flex;
-     justify-content:center
- }
- /* .container .row .col-lg-5 {
-     display: flex;
-     justify-content:space-between
- } */
 
- .card {
-     position: relative;
-     padding: 0;
-     margin: 0 !important;
-     border-radius: 20px;
-     overflow: hidden;
-     max-width: 210px;
-     max-height: 250px;
-     cursor: pointer;
-     border: none;
-     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2)
- }
+        .card {
+            position: relative;
+            padding: 0;
+            margin: 0 !important;
+            border-radius: 20px;
+            overflow: hidden;
+            max-width: 210px;
+            max-height: 250px;
+            cursor: pointer;
+            border: none;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2)
+        }
 
- .card .card-image {
-     width: 100%;
-     max-height: 250px
- }
+        .card .card-image {
+            width: 100%;
+            max-height: 250px
+        }
 
- .card .card-image img {
-     width: 100%;
-     max-height: 320px;
-     object-fit: cover
- }
+        .card .card-image img {
+            width: 100%;
+            max-height: 320px;
+            object-fit: cover
+        }
 
- .card .card-content {
-     position: absolute;
-     bottom: -180px;
-     color: #fff;
-     background: rgba(255, 255, 255, 0.2);
-     backdrop-filter: blur(15px);
-     min-height: 100px;
-     width: 100%;
-     transition: bottom .4s ease-in;
-     box-shadow: 0 -10px 10px rgba(255, 255, 255, 0.1);
-     border-top: 1px solid rgba(255, 255, 255, 0.2)
- }
+        .card .card-content {
+            position: absolute;
+            bottom: -180px;
+            color: #fff;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(15px);
+            min-height: 100px;
+            width: 100%;
+            transition: bottom .4s ease-in;
+            box-shadow: 0 -10px 10px rgba(255, 255, 255, 0.1);
+            border-top: 1px solid rgba(255, 255, 255, 0.2)
+        }
 
- .card:hover .card-content {
-     bottom: 0px
- }
+        .card:hover .card-content {
+            bottom: 0px
+        }
 
- .card:hover .card-content h4,
- .card:hover .card-content h5 {
-     transform: translateY(10px);
-     opacity: 1
- }
+        .card:hover .card-content h4,
+        .card:hover .card-content h5 {
+            transform: translateY(10px);
+            opacity: 1
+        }
 
- .card .card-content h4,
- .card .card-content h5 {
-     font-size: 1.1rem;
-     text-transform: uppercase;
-     letter-spacing: 3px;
-     text-align: center;
-     transition: 0.8s;
-     font-weight: 500;
-     opacity: 0;
-     transform: translateY(-40px);
-     transition-delay: 0.2s
- }
+        .card .card-content h4,
+        .card .card-content h5 {
+            font-size: 1.1rem;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            text-align: center;
+            transition: 0.8s;
+            font-weight: 500;
+            opacity: 0;
+            transform: translateY(-40px);
+            transition-delay: 0.2s
+        }
 
- .card .card-content h5 {
-     transition: 0.5s;
-     font-weight: 200;
-     font-size: 0.8rem;
-     letter-spacing: 2px
- }
+        .card .card-content h5 {
+            transition: 0.5s;
+            font-weight: 200;
+            font-size: 0.8rem;
+            letter-spacing: 2px
+        }
 
- .card .card-content .social-icons {
-     list-style: none;
-     padding: 0
- }
+        .card .card-content .social-icons {
+            list-style: none;
+            padding: 0
+        }
 
- .card .card-content .social-icons li {
-     margin:5px;
-     transition: 0.5s;
-     transition-delay: calc(0.15s * var(--i));
-     transform: translateY(50px)
- }
+        .card .card-content .social-icons li {
+            margin: 5px;
+            transition: 0.5s;
+            transition-delay: calc(0.15s * var(--i));
+            transform: translateY(50px)
+        }
 
- .card:hover .card-content .social-icons li {
-     transform: translateY(10px)
- }
+        .card:hover .card-content .social-icons li {
+            transform: translateY(10px)
+        }
 
- .card .card-content .social-icons li a {
-     color: #fff
- }
+        .card .card-content .social-icons li a {
+            color: #fff
+        }
 
- .card .card-content .social-icons li a span {
-     font-size: 1.3rem
+        .card .card-content .social-icons li a span {
+            font-size: 1.3rem
+        }
 
- }
+        @media(max-width: 991.5px) {
+            .container {
+                margin-top: 20px
+            }
 
- @media(max-width: 991.5px) {
-     .container {
-         margin-top: 20px
-     }
-
-     .container .row .col-lg-4 {
-         margin: 20px 0px
-     }
-
- }</style>
+            .container .row .col-lg-4 {
+                margin: 20px 0px
+            }
+        }
+    </style>
 </head>
 
-<body oncontextmenu='return false' class='snippet-body'>
+<body class="sb-nav-fixed" oncontextmenu='return false'>
     <div class="container">
         <li class="breadcrumb-item"><a href="index.html" style="color:#fff">Dashboard</a></li>
-        <br>
-    <div class="row">
-        <div class="col-lg-4">
-            <div class="card p-0">
-                <div class="card-image"> <img src="https://images.pexels.com/photos/2746187/pexels-photo-2746187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="card-content d-flex flex-column align-items-center">
-                    <h4 class="pt-2">people 1</h4>
-                    <h5>Creative Desinger</h5>
-                    <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="mailto:"> <span class="fab fa-google"></span> </a> </li>
-                        <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
-                        <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
-                    </ul>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <div class="card-image" onclick="location.href='#';" target="_blank">
+                        <img src="{{ url_for('static', filename='assets/img/Stephanie.jpeg') }}" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Stephanie</h4>
+                        <h5>沈琬容</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="#" target="_blank"> <span class="fab fa-linkedin"></span> </a>
+                            </li>
+                            <li style="--i:2"> <a href="#" target="_blank"> <span class="fab fa-github"></span>
+                                </a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <!-- <div class="card-image"
+                        onclick="location.href='https://www.cakeresume.com/s--jJgM5fwSFTcbqsXTXmh6bw--/robert-liu'; target='_blank'"> -->
+                    <div class="card-image"
+                        onclick="window.open('https://www.cakeresume.com/s--jJgM5fwSFTcbqsXTXmh6bw--/robert-liu', '_blank')">
+                        <img src="{{ url_for('static', filename='assets/img/Robert.jpeg') }}" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Robert</h4>
+                        <h5>劉柏辰</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="https://www.linkedin.com/in/robert-liu-63840b185/"
+                                    target="_blank"> <span class="fab fa-linkedin"></span> </a> </li>
+                            <li style="--i:2"> <a href="https://github.com/RL876" target="_blank"> <span
+                                        class="fab fa-github"></span>
+                                </a> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <div class="card-image"
+                        onclick="location.href='https://www.cakeresume.com/s--GNvjq98P_2PztiwYngcYBg--/cathy-ruan';"
+                        target="_blank">
+                        <img src="{{ url_for('static', filename='assets/img/Cathy.jpeg') }}" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Cathy </h4>
+                        <h5>阮怡靜</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="https://www.linkedin.com/in/yi-jing-ruan-4a010a115/"
+                                    target="_blank"> <span class="fab fa-linkedin"></span> </a> </li>
+                            <li style="--i:2"> <a href="https://github.com/Cathy224" target="_blank"> <span
+                                        class="fab fa-github"></span> </a> </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
-            <div class="card p-0">
-                <!-- <div class="card-image"> <img src="../static/assets/img/11.png" alt=""> </div> -->
-                <div class="card-image"> <img src="https://images.pexels.com/photos/381843/pexels-photo-381843.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="card-content d-flex flex-column align-items-center">
-                    <h4 class="pt-2">11</h4>
-                    <h5>加油加油11加油加油</h5>
-                    <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
-                        <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
-                        <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
-                    </ul>
+        <br><br><br><br><br>
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <div class="card-image" onclick="location.href='https://www.cakeresume.com/thea9173823';"
+                        target="_blank"> <img src="{{ url_for('static', filename='assets/img/Gung.jpeg') }}" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Len</h4>
+                        <h5>范綱倫</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="#" target="_blank"> <span class="fab fa-linkedin"></span> </a>
+                            </li>
+                            <li style="--i:2"> <a href="https://github.com/tinolen" target="_blank"> <span
+                                        class="fab fa-github"></span>
+                                </a> </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card p-0">
-                <div class="card-image"> <img src="https://images.pexels.com/photos/139829/pexels-photo-139829.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="card-content d-flex flex-column align-items-center">
-                    <h4 class="pt-2">Cathy</h4>
-                    <h5>Creative Desinger</h5>
-                    <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
-                        <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
-                        <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
-                    </ul>
+            <div class="col-lg-4">
+                <div class="card p-0">
+                    <div class="card-image"
+                        onclick="location.href='https://www.cakeresume.com/s--uU5PkrMUwFG864A5i6QOVw--/andy70003';"
+                        target="_blank">
+                        <img src="{{ url_for('static', filename='assets/img/Andy.jpeg') }}" alt="">
+                    </div>
+                    <div class="card-content d-flex flex-column align-items-center">
+                        <h4 class="pt-2">Andy</h4>
+                        <h5>傅文奕</h5>
+                        <ul class="social-icons d-flex justify-content-center">
+                            <li style="--i:1"> <a href="#" target="_blank"> <span class="fab fa-linkedin"></span> </a>
+                            </li>
+                            <li style="--i:2"> <a href="#" target="_blank"> <span class="fab fa-github"></span>
+                                </a> </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-<br>
-    <div class="row">
-        <div class="col-lg-4">
-            <div class="card p-0">
-                <span></span>
-                <div class="card-image"> <img src="https://images.pexels.com/photos/2746187/pexels-photo-2746187.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="card-content d-flex flex-column align-items-center">
-                    <h4 class="pt-2">people 4</h4>
-                    <h5>Creative Desinger</h5>
-                    <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
-                        <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
-                        <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4">
-            <div class="card p-0">
-                <div class="card-image"> <img src="https://images.pexels.com/photos/381843/pexels-photo-381843.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt=""> </div>
-                <div class="card-content d-flex flex-column align-items-center">
-                    <h4 class="pt-2">people 5</h4>
-                    <h5>Creative Desinger</h5>
-                    <ul class="social-icons d-flex justify-content-center">
-                        <li style="--i:1"> <a href="#"> <span class="fab fa-google"></span> </a> </li>
-                        <li style="--i:2"> <a href="#"> <span class="fab fa-linkedin"></span> </a> </li>
-                        <li style="--i:3"> <a href="#"> <span class="fab fa-github"></span> </a> </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
-<script type='text/javascript'></script>
 </body>
 
 </html>
