--- a/templates/charts.html
+++ b/templates/charts.html
@@ -177,7 +177,7 @@
                             <i class="fas fa-chart-area me-1"></i>
                             Predict
                         </div>
-                        <div class="card-body"><canvas id="myAreaChart" width="100%" height="80"></canvas></div>
+                        <div class="card-body"><canvas id="myAreaChart" width="100" height="80"></canvas></div>
                         <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                     </div>
                     <div class="row">
@@ -187,7 +187,7 @@
                                     <i class="fas fa-chart-bar me-1"></i>
                                     Volume
                                 </div>
-                                <div class="card-body"><canvas id="myBarChart" width="100%" height="50"></canvas></div>
+                                <div class="card-body"><canvas id="myBarChart" width="100" height="50"></canvas></div>
                                 <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                             </div>
                         </div>
@@ -197,7 +197,7 @@
                                     <i class="fas fa-chart-pie me-1"></i>
                                     News Sentiment
                                 </div>
-                                <div class="card-body"><canvas id="myPieChart" width="100%" height="50"></canvas></div>
+                                <div class="card-body"><canvas id="myPieChart" width="100" height="50"></canvas></div>
                                 <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                             </div>
                         </div>
