--- a/templates/members.html
+++ b/templates/members.html
@@ -217,7 +217,7 @@
                         <h4 class="pt-2">Len</h4>
                         <h5>范綱倫</h5>
                         <ul class="social-icons d-flex justify-content-center">
-                            <li style="--i:1"> <a href="#" target="_blank"> <span class="fab fa-linkedin"></span> </a>
+                            <li style="--i:1"> <a href="https://www.linkedin.com/in/gung-lun-fan-274742225/" target="_blank"> <span class="fab fa-linkedin"></span> </a>
                             </li>
                             <li style="--i:2"> <a href="https://github.com/tinolen" target="_blank"> <span
                                         class="fab fa-github"></span>
