--- a/templates/charts.html
+++ b/templates/charts.html
@@ -90,6 +90,10 @@
                             Tables
                         </a>
                         <div class="sb-sidenav-menu-heading">Profile</div>
+                        <a class="nav-link" href="home.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                            Introduction
+                        </a>
                         <a class="nav-link" href="members.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Members
