--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,10 @@
                             Tables
                         </a>
                         <div class="sb-sidenav-menu-heading">Profile</div>
+                        <a class="nav-link" href="home.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                            Introduction
+                        </a>
                         <a class="nav-link" href="members.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Members
@@ -177,13 +181,13 @@
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item active">Dashboard</li>
                     </ol>
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-primary text-white mb-4">
                                 <div class="card-body">Spark on YARN</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
                                     <!-- <a class="small text-white stretched-link" href="#">View Details</a> -->
-                                    <a class="small text-white stretched-link" href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/" target="_blank">View Details</a>
+                                    <!-- <a class="small text-white stretched-link" href="https://hackmd.io/@XYojb--aQQq12eTpXK-TPQ/S1cKbSh8t#/" target="_blank">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
@@ -214,8 +218,8 @@
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div>  -->
                     <div class="row">
                         <div class="col-xl-6">
                             <div class="card mb-4">
