--- a/templates/members.html
+++ b/templates/members.html
@@ -238,9 +238,9 @@
                         <h4 class="pt-2">Andy</h4>
                         <h5>傅文奕</h5>
                         <ul class="social-icons d-flex justify-content-center">
-                            <li style="--i:1"> <a href="#" target="_blank"> <span class="fab fa-linkedin"></span> </a>
+                            <li style="--i:1"> <a href="http://www.linkedin.com/in/wenyi-fu555870225" target="_blank"> <span class="fab fa-linkedin"></span> </a>
                             </li>
-                            <li style="--i:2"> <a href="#" target="_blank"> <span class="fab fa-github"></span>
+                            <li style="--i:2"> <a href="https://github.com/AndyWenYi" target="_blank"> <span class="fab fa-github"></span>
                                 </a> </li>
                         </ul>
                     </div>
