--- a/templates/index-code.html
+++ b/templates/index-code.html
@@ -8,9 +8,9 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>YOU!GOOD!</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/Favicon.ico') }}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/Favicon.ico') }}" />
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
@@ -48,10 +48,13 @@
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
-        <form method ="POST" action="/yougood/index-code.html" class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+        <form method="POST" action="/yougood/index-code.html"
+            class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
-                <input type="text" name ="code" class="form-control" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-                <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i class="fas fa-search"></i></button>
+                <input type="text" name="code" class="form-control" placeholder="Search for..."
+                    aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                <button class="btn btn-primary" id="btnNavbarSearch" type="submit"><i
+                        class="fas fa-search"></i></button>
             </div>
         </form>
     </nav>
@@ -96,8 +99,7 @@
                 <div class="container-fluid px-4">
                     <h1 class="mt-4">{{ code }}</h1>
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item active"><a href="index.html">Dashboard</a></li>
-                        <!-- <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li> -->
+                        <li class="breadcrumb-item active">Dashboard</li>
                     </ol>
                     <div class="row">
                         <div class="col-xl-6">
